[issue]Don't know how to make welcome message visible for all devices and window variations

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -496,8 +496,8 @@
     For landscape and portrait 
     orientation.
 ================================*/
-@media (max-height: 599px) and (max-width: 1024px) and (orientation: landscape),
-    (max-width: 599px) and (max-height: 1024px) and (orientation: portrait) {
+@media (max-height: 599px) and (orientation: landscape),
+    (max-height: 764px) and (orientation: portrait) {
 	#home-slider .slide-text {
 		display: none;
 	}
